hphp/test/zend/good/exception_002.php
<?php 

goto foo;

try {
	print 1;
	
	foo:
	print 2;
} catch (Exception $e) {
	
}

?>